# charity-aid-pro

./: .env.example  .gitignore  .mcp.json
.github/workflows/: email-pipeline.yml
email_parsing/: README.md  config.py  function_app.py  llm.py  local_server.py  main.py  outlook.py  pipeline_test.py  requirements-dev.txt  requirements.txt  run.py  run_live.py  schema.py  scoring.py  storage.py  test_local.py
email_parsing/core/: config.py  email_client.py  llm_parser.py  schema.py  storage.py
email_parsing/prompts/: parse.txt
email_parsing/scoring/: algorithmic.py  gating.py  llm.py  models.py  pipeline.py
email_parsing/tests/: conftest.py  test_llm.py  test_scoring.py
scoring/: README.md  prompt.md  pyproject.toml  results.json  results_analysis.md  test_opportunities_curated.json
scoring/app/: algorithmic.py  gating.py  llm.py  main.py  pipeline.py
scoring/tests/: test_algorithmic.py  test_gating.py  test_llm.py  test_pipeline.py
src/: App.tsx  index.css
src/components/: AppSidebar.tsx  DashboardLayout.tsx  ProtectedRoute.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useActiveFunding.ts  useFunderContacts.ts  useOpportunities.ts  useReminderRules.ts
src/lib/: database.types.ts  mock-data.ts  supabaseClient.ts
src/pages/: AuthPage.tsx  Discover.tsx  Funding.tsx  Index.tsx  Pipeline.tsx  Relationships.tsx  Reminders.tsx  Reports.tsx
supabase/migrations/: 20260504000000_create_opportunities.sql  20260512000000_add_application_tracking_fields.sql
